# FinanceOverViewTraining

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: DUMMY_ServerSettings.ini  DUMMY_TestSettings.ini  ServerSettings.ini  default_RegisterMailBody.html  default_ResetPasswordBody.html  default_log_settings.yaml
documentation/: closing_accounts.md  tables.md
src/: accounting_config_database.rs  accounting_config_logic.rs  accounting_database.rs  accounting_logic.rs  ajax_handle.rs  convert_tools.rs  database_handler_couchbase.rs  database_handler_mongodb.rs  datatypes.rs  frontend_functions.rs  html_render.rs  mail_handle.rs  main.rs  mdb_convert_tools.rs  mongo_dbsession_store_handle.rs  password_handle.rs  session_data_handle.rs  session_handle.rs  setting_struct.rs  user_handling.rs  user_id_handle.rs
src/tests/: mocking_database.rs  testing_accounting_booking.rs  testing_accounting_config.rs  testing_convert_tools.rs  testing_email_smtp.rs  testing_email_validation.rs
templates/: CreateLogin.html  EmailValidationResult.html  EvenCall.html  InvalidUser.html  OddCall.html  PasswordResetTokenRequest.html  PasswordResetWithToken.html  RegisterUser.html  RegistrationComplete.html  RegistrationIncomplete.html  UserHome.html  WelcomePage.html
templates/AccountingConfig/: AccountingConfig_main.html  accountRow.html  accountTypeRow.html
templates/AccountingOverview/: AccountTableView.html  AccountingAccountReview.html  AccountingJournalView.html  AccountingMain.html
tests/: testing_email_smtp.rs
