[package]
name = "finance_overview_training"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2"}
axum-server = {version = "0.6", features = ["tls-rustls"] }

tokio = { version = "1.36", features = ["full"] }
tower = "0.4.13"
