[package]
name = "finance_overview_training"
version = "0.0.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
argon2 = "0.5.3"
askama = "0.12.1"

async-mongodb-session = "3.0.0"
async-session = "3.0.0"

axum = { version = "0.7.2"}
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie"] }
axum-server = {version = "0.6", features = ["tls-rustls"] }

futures = "0.3"

log = "0.4.20"
log4rs = "1.3.0"
mail-send = "0.4.6"
once_cell = { version = "1.19.0"}
rand = "0.8.5"
regex-automata = "0.4.3"
rust-ini = {version = "0.20.0"}
secrecy = {version = "0.8.0", features = ["serde", "alloc"] }
serde ="1"
tokio = { version = "1.36", features = ["full"] }


[dependencies.mongodb]
version = "=2.8.1"
default-features = false
features = ["async-std-runtime", "bson-uuid-0_8"]